--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>The Alkali Metals</title>
   <link href="./css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Serif|Poppins" rel="stylesheet">
+  <link href="favicon.png" rel="icon">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/hamburger.js" type="text/javascript"></script>
   <script src="js/smooth-scroll.js" type="text/javascript"></script>
